--- a/lanqiao/pom.xml
+++ b/lanqiao/pom.xml
@@ -17,6 +17,14 @@
     </properties>
 
     <dependencies>
+<!--        腾讯云-->
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <!-- go to https://search.maven.org/search?q=tencentcloud-sdk-java and get the latest version. -->
+            <!-- 请到https://search.maven.org/search?q=tencentcloud-sdk-java查询所有版本，最新版本如下 -->
+            <version>3.1.547</version>
+        </dependency>
         <!-- 单元测试5-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
